# fp-f24-report-website-t03-skyscan

./: .gitignore  OLD_README.md  README-Reference.md  README.md
SkyScan-Selenium/: data.txt  local_server.py  main.py  requirements.txt  server.py  test.py
gateway/: CMakeLists.txt  prj.conf
gateway/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
gateway/src/: lora.c  main.c  main2.c
lora_device_side/: lora_device_side.ino
lora_gateway_side/: lora_gateway_side.ino
memfault_wifi_demo-main/: prj.conf
memfault_wifi_demo-main/build_1/: .vscode-nrf-connect.json
memfault_wifi_demo-main/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
memfault_wifi_demo-main/src/: main.c
